
XXXX-XX-XX	0.0.5	- SIOC generator independence in Buxon
			- Cache dump added in Buxon

2006-11-21	0.0.4	- Minor bugs fixed
			- sioc:Site class added
			- New inheritance scheme for classes with any type of UI
			- Added make file rules to install

2006-11-01	0.0.3	- Buxon, a sioc:Forum visor written in PyGTK, added

2006-10-13	0.0.2	- New configuration method based in INI files
			- New scripts to add FOAF and KML independent support of main script

2006-10-02	0.0.1	- First release