@@ -23,7 +23,7 @@ Development happens on BerliOS Forge:
 REQUIREMENTS:
 -------------
 
-To use 'swaml', foaf.py and kml.py scripts you only need:
+To use 'swaml', 'configWizard', 'foaf' and 'kml' scripts you only need:
 
 	- python >= 2.4.0
 	- rdflib = 2.3.1	(Official releases at http://rdflib.net/releases/. Warning: rdflib != librdf)
